fix: duplicated toc top margin on mobile

--- a/assets/styles/pages/single.scss
+++ b/assets/styles/pages/single.scss
@@ -93,6 +93,11 @@
 }
 
 @include responsive(md) {
+  .sticky {
+    // remove unused top margin of toc on mobile
+    margin-top: 0 !important;
+  }
+
   .toc {
     position: fixed;
     right: 0;
